--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "express": "^4.18.2",
+    "mongoose": "^7.0.2",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
