--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "express": "^4.18.2",
-    "mongoose": "^7.0.2",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.0.3",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
